syntax = "proto3";

//import "google/protobuf/timestamp.proto";

option csharp_namespace = "interfaces.Protos";

service DogGrpc {
  rpc GetDogs(NullRequest) returns (stream DogModel);
  rpc GetUserDogs(GetUserDogRequest) returns (stream DogModel);
  rpc GetDog(DogIdRequest) returns (DogModel);
  rpc AddDog(AddDogRequest) returns (DogModel);
  rpc RemoveDog(DogIdRequest) returns (DogModel);
  rpc AdoptDog(AdoptDogRequest) returns (DogModel);
}

message NullRequest { }

message DogIdRequest {
	int32 Id = 1;
}

message AdoptDogRequest {
	int32 Id = 1;
	int32 UserId = 2;
}

message GetUserDogRequest {
	int32 UserId = 1;
}

message AddDogRequest {
	int32 UserId = 1;
	string Name = 2;
}

message DogModel {
	int32 Id = 1;
	int32 UserId = 2;
	string Name = 3;
}
